Added A COMMUNITY-CENTERED RESEARCH PROJECT Supported by The National Science Foundation

--- a/getin.html
+++ b/getin.html
@@ -23,6 +23,7 @@
   </div>
 
   <div class="main">
+    
     <div class="Event">
       <div class="img">
         <img src="./img/events/food_event.png" alt="Food Justice Workshop">
@@ -30,6 +31,16 @@
       <div>
         <h2>Food Justice Workshop</h2>
         <p>Come and learn about our Food is Medicine Program!</p>
+      </div>
+    </div>
+
+    <div class="Event">
+      <div class="img">
+        <img src="./img/events/Flyer for UW Study Recruiment_website.png" alt="study">
+      </div>
+      <div>
+        <h2>A COMMUNITY-CENTERED RESEARCH PROJECT Supported by The National Science Foundation</h2>
+        <p>Read more <a style="color:green" href="./img/events/Flyer for UW Study Recruiment_website.pdf">here</a>  and sign up at <a style="color:green" href="https://tinyurl.com/UWRecruitment-Form"> https://tinyurl.com/UWRecruitment-Form </a></p>
       </div>
     </div>
 
