--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="main">
     <div class="about">
       <img id="Mlogo" src="./img/urbanLogo.jpeg" alt="Logo">
-      <h1 id="title" style="color:green">Smart Technologies in Black Diasporic Agriculture</h1>
+      <h1 id="title" style="color:green"> Food Sovereignty, Urban Farming, & AI</h1>
     </div>
     <div class="about">
       <!-- <div>
