--- a/meet.html
+++ b/meet.html
@@ -25,81 +25,69 @@
   <div class="main">
     <div class="team">
       <div class="person">
-        <div class="img">
+        <div class="pHeader img">
           <img src="./img/team/sucheta-ghoshal.jpeg" alt="Sucheta Ghoshal">
-        </div>
-        <div class="pHeader">
-          <h2>Sucheta Ghoshal</h2>
+          <h2><a href="https://www.hcde.washington.edu/ghoshal">Sucheta Ghoshal</a></h2>
           <p>Principal Investigator</p>
+          <p>Assistant Professor at the Department of Human Centered Design & Engineering</p>
         </div>
       </div>
   
       <div class="person">
-        <div class="img">
-          <img src="./img/team/daniela.png" alt="Daniela Rosner">
-        </div>
-        <div class="pHeader">
-          <h2>Daniela Rosner</h2>
+        <div class="pHeader class= img">
+          <img  src = "./img/team/daniela.png" alt="Daniela Rosner">
+          <h2><a href="https://www.hcde.washington.edu/rosner">Daniela Rosner</a></h2>
           <p>Co-Principal Investigator</p>
+          <p>Associate Professor in Human Centered Design & Engineering (HCDE)</p>
         </div>
       </div>
   
       <div class="person">
-        <div class="img">
+        <div class="pHeader img">
           <img src="./img/team/vikram.jpeg" alt="Vikram Iyer">
-        </div>
-        <div class="pHeader">
-          <h2>Vikram Iyer</h2>
+          <h2><a href="https://homes.cs.washington.edu/~vsiyer/">Vikram Iyer</a></h2>
           <p>Co-Principal Investigator</p>
+          <p>Assistant Professor in the Paul G. Allen School of Computer Science and Engineering</p>
         </div>
       </div>
   
       <div class="person">
-        <div class="img">
+        <div class="pHeader img">
           <img src="./img/team/LaTanya.jpeg" alt="La Tanya Horace DuBois">
-        </div>
-        <div class="pHeader">
-          <h2>LaTanya Horace DuBois</h2>
+          <h2><a href="https://www.thesilenttaskforce.org/">LaTanya Horace DuBois</a></h2>
+          <p>Co-executive Director of The Silent Task Force</p>
           <p>Community Research Lead</p>
         </div>
       </div>
   
       <div class="person">
-        <div class="img">
+        <div class="pHeader img">
           <img src="./img/team/vicente.png" alt="Vicente Arroyos">
-        </div>
-        <div class="pHeader">
-          <h2>Vicente Arroyos</h2>
+          <h2><a href="https://homes.cs.washington.edu/~arroyv/">Vicente Arroyos</a></h2>
           <p>PhD Student</p>
         </div>
       </div>
   
       <div class="person">
-        <div class="img">
+        <div class="pHeader img">
           <img src="./img/team/mkane.jpeg" alt="McKane Andrus">
-        </div>
-        <div class="pHeader">
-          <h2>McKane Andrus</h2>
+          <h2><a href="https://www.linkedin.com/in/mckane-andrus-06a0b579/">McKane Andrus</a></h2>
           <p>PhD Student</p>
         </div>
       </div>
   
       <div class="person">
-        <div class="img">
+        <div class="pHeader img">
           <img src="./img/team/lubna.jpeg">
-        </div>
-        <div class="pHeader">
-          <h2>Lubna Razaq</h2>
+          <h2><a href="https://www.linkedin.com/in/lubna-razaq-4517744b">Lubna Razaq</a></h2>
           <p>PhD Student</p>
         </div>
       </div>
   
       <div class="person">
-        <div class="img">
+        <div class="pHeader img">
           <img src="./img/team/ahmed.jpg">
-        </div>
-        <div class="pHeader">
-          <h2>Ahmed Abdi</h2>
+          <h2><a href="http://students.washington.edu/aabdi7/">Ahmed Abdi</a></h2>
           <p>Undergraduate Student</p>
         </div>
       </div>
