--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
       <p>&copy; 2024 | Using telecomsteve theme</p>
     </div>
   </div>
-
+<div class="main">
   <div class="projects">
     <h1>Ongoing Projects</h1>
     <div class="project1">
@@ -48,5 +48,6 @@
       </div>
     </div>
   </div>
+</div>
 </body>
 </html>
